option(
    'bindings',
    type: 'array',
    choices: ['python'],
)
option(
    'test',
    type: 'boolean',
    value: false,
)
option(
    'docs',
    type: 'boolean',
    value: false,
)
option(
    'only-wheels',
    type: 'boolean',
    value: false,
)
option(
    'fuzz',
    type: 'boolean',
    value: false,
)
option(
    'fuzz-corpus',
    type: 'string',
)
option(
    'fuzz-options',
    type: 'string',
)