[project]
name = 'pms-utils'
description = "A helper library to implement the Gentoo Package Manager Specification"
dynamic = ['version']
dependencies = ["typing-extensions; python_version < '3.11'"]
requires-python = '>= 3.8'

[project.urls]
source = "https://github.com/Jannik2099/pms-utils"
documentation = "https://pms-utils.pages.dev"

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', "typing-extensions; python_version < '3.11'"]

[tool.meson-python.args]
install = ['--tags=runtime,python-runtime']
dist = ['--include-subprojects']
