inc_lib = include_directories('.')

install_headers(
    [
        'pms-utils/atom/atom.hpp',
        'pms-utils/atom/atom_parser.hpp',
        'pms-utils/depend/depend.hpp',
        'pms-utils/depend/depend_parser.hpp',
        'pms-utils/ebuild/ebuild.hpp',
        'pms-utils/ebuild/ebuild_parser.hpp',
        'pms-utils/repo/repo.hpp',
        'pms-utils/profile/profile.hpp',
        'pms-utils/profile/profile_parser.hpp',
        'pms-utils/misc/macro-begin.hpp',
        'pms-utils/misc/macro-end.hpp',
        'pms-utils/misc/meta.hpp',
        'pms-utils/misc/x3_utils.hpp',
    ],
    preserve_path: true,
)